outdoornav_user_manual_versioned_docs/version-2.0.0/quick_start/quick_start.mdx
---
title: Quick Start
sidebar_label: Quick Start
sidebar_position: 1
toc_min_heading_level: 2
toc_max_heading_level: 4
---

This section outlines how to set up your OutdoorNav system for some
preliminary testing with the OutdoorNav Software on a UGV.

## Connect to Web UI {#connecting_to_web_ui}

1. Ensure that the UGV is powered on.
1. If the optional Base Station is included, ensure that it is powered on.
1. If using a custom networking configuration, ensure that the custom
   networking setup on the UGV is complete.
1. Connect your computer to the same wifi network as the UGV, then open the
   Chrome browser on your computer and load the OutdoorNav Homepage.

   -  Option 1 (easiest): No base station, computer connected to UGV's
      wifi access point (eg. cpr_a300_amp_00009)
      - OutdoorNav homepage: https://192.168.131.1
   -  Option 2: No base station, UGV and computer connected to the same
      (external) wifi access point
      - OutdoorNav homepage:
           - if DNS is working on the wifi network, use the robot's hostname (eg. https://cpr-a300-00009)
           - if DNS is not working on the wifi network, check the IP address of the UGV's computer and use it
   -  Option 3: Base station, UGV and computer connected to base station
      - OutdoorNav homepage: use the IP address that was noted on the documentation
        that shipped with the robot

1. Click to accept the End-User License Agreement. This page will be visible each
   time the UGV is restarted but only on the first navigation to the page.
   The EULA should be reviewed prior to using the system.

<center>
  <figure>
    <img src="/img/outdoornav_images/ui_mission_view_2_0_0.png" />
    <figcaption>Web UI Mission Planning View</figcaption>
  </figure>
</center>

## Check Camera Views {#checking-camera-feeds}

When your system includes cameras, the live view from each camera is shown on the right side
of the OutdoorNav Homepage. Clicking on a camera view will maximize it on the screen.
Cycle through each camera view and confirm that it is providing live updates.

Refer to [Camera Views](../web_user_interface/ui_overview#camera-views) for more details.

<center>
  <figure>
    <img src="/img/outdoornav_images/ui_front_camera_view_2_0_0.png" />
    <figcaption>Web UI Front Camera View</figcaption>
  </figure>
</center>

## Check System Status {#checking-system-status}

Access **Menu** &srarr; **TOOLS** &srarr; **Status Monitor** to display the system status.

Make note of any issues and correct those before proceeding.

<center>
  <figure>
    <img src="/img/outdoornav_images/ui_status_monitor-2_0_0.png" />
    <figcaption>Web UI Status Monitor (showing warnings on IMU status and Wheelspeed)</figcaption>
  </figure>
</center>

## Check GPS RTK Fix {#checking-gpt-rtk-fix}

Each time the UGV has been powered up (or moved from a GPS-denied
environment to a GPS-available environment), let the UGV sit in this
position for 2 minutes to acquire an RTK GPS fix. The POS (position), 
DIR (heading), and FUS (sensor fusion) GPS status indicators on the UI
should be green: <img src="/img/outdoornav_images/ui_status_indicators-2_0_0.png" width="75px" />.

:::note

If the GPS status indicators are yellow or red, the selected location
does not have an adequate GPS signal. Move the UGV such that the GPS
antennas have clearer visibility to satellites.

If your robot is not equipped with a Base Station, a separate data
source is required to obtain a GPS fix. Contact [Support](../support)
for additional details.

:::

## Complete the System Configuration {#system_config}

### Load Map Tiles {#loading_map_tiles}

The Web UI does not cache map tiles on the browser; therefore, the user
will need to ensure their computer has a connection to an Internet
source to load the map tiles. There are a several options to achieve
this:

1.  If the system includes a Base Station that is connected to the
    Internet, you will be able to access the Internet and therefore map
    tiles over the base station network without needing any further
    updates.
2.  Connect your phone via USB to your computer (or tablet) and enable
    USB tethering on your phone to share the Internet from your phone.
3.  Switch your computer (or tablet) to a network that is connected to
    the Internet, zoom in/out of the map to load the tiles then switch
    back to the original network.

### Set Dock Location

:::note

If the Clearpath Robotics autonomous docking package has been included,
follow these instructions to set up the dock location. Otherwise, this
section can be skipped.

:::

:::warning

Keep the area around the dock free of objects and people. There is no
obstacle detection between the pre-docking point and the dock;
similarly, there is no obstacle detection during the undocking
operation.

:::

<center>
  <figure>
    <img width="200px" src="/img/outdoornav_images/a300_dock_target.png" />
    <figcaption>Husky A300 Autocharge Dock</figcaption>
  </figure>
  <figure>
    <img width="400px" src="/img/outdoornav_images/a300_charging.png" />
    <figcaption>Husky A300 at Dock</figcaption>
  </figure>
</center>

Before being able to dock the UGV autonomously, set up the dock
location. Follow these steps to position the UGV in its correct position
and orientation.

1.  Power ON the UGV and wait for the system to finish booting.

2.  Start by manually driving the UGV to the dock target and align it as
    straight and centered as possible so that it begins charging. 

3.  Let the UGV sit in this position for 2 minutes to acquire an RTK GPS
    fix. The POS (position), DIR (heading), and FUS (sensor fusion) GPS status indicators on
    the UI should be green: <img src="/img/outdoornav_images/ui_status_indicators-2_0_0.png" width="75px" />.

    :::note
    
    If the GPS status indicators are yellow or red, the selected
    location of the dock is NOT appropriate. Please change the dock
    location such that the GPS antennas have a clearer visibility.

    :::

4.  On the UI, **Menu** &srarr; **SETTINGS** &srarr; **Add New Dock Location**.
    The dock location will be stored in 5 - 10 seconds as data is collected.

If the Base Station has been moved (and therefore been resurveyed), or
if the dock has been moved to a new location, the user will need to
reset the location of the dock. This is done in the following manner:

1.  Repeat the previous set of instructions from step 1 to 4.

2.  While in **Edit Mode** select the dock on the UI. A drop down should appear
    with the option to reset the dock location. Select that option.

3.  After approximately 5 - 10 seconds the dock location should be updated and the UI will
    reflect the change accordingly.

## Create Your First Map

1.  Ensure that the UI is in "Map Edit Mode":
    <img src="/img/outdoornav_images/ui_edit_button.png" width="40px" />  &srarr; 
    <img src="/img/outdoornav_images/ui_edit_map.png" width="40px" />.
1.  Open the drop down menu in the bottom bar (left-side) and select the "Add Map" option.
1.  Start placing points and building paths. (A map will be created with the default settings.)

For more details, refer to [Map Creation](../web_user_interface/ui_map_mode#mapCreation).

## Create Your First Mission

1.  Ensure that the UI is in "Mission Edit Mode":
    <img src="/img/outdoornav_images/ui_edit_button.png" width="40px" />  &srarr; 
    <img src="/img/outdoornav_images/ui_edit_mission.png" width="40px" />.
1.  Open the drop down menu in the bottom bar (right side) and select the "Add Mission" option.
1.  Select the "Goalpoint Mode" button.
1.  Click on the map to add a goalpoint.
1.  Confirm that a preview path is shown on the map.

For more details, refer to [Mission Creation](../web_user_interface/ui_map_mode#missionCreation).

## Execute Your First Mission

1.  In the bottom bar of the UI, click the "Play" button <img src="/img/outdoornav_images/ui_start_button_simple.png" width="16px"/>.
1.  Confirm that the "Play" button has turned green, which indicates that the mission has started.

For more details, refer to [Mission Execution](../web_user_interface/ui_map_mode#missionExecution).
